# Pico-W_Wi-Fi_Configure

./: .gitignore  CMakeLists.txt  LICENSE.TXT  README.md  main.c  tcp_test_server.c  tcp_test_server.h
linux/: client  client.c
wifi_setup/: _my_fsdata.c  access_point.c  access_point.c_save  access_point.h  dhcp_server.c  flash_program.c  flash_program.h  http_server.c  http_server.h  my_fsdata.c  rebuild_fs.sh
wifi_setup/fs/: done.html  index.shtml
